<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/todaysGoal_caps"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goal_goalName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="18sp" />

        <Button
            android:id="@+id/goal_checkinButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"
            android:onClick="completeCheckin"
            android:text="" />

        <LinearLayout
            android:id="@+id/goal_mapLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/map_caps"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/goal_mapImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goal_checkoutLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/checkout_caps"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goal_yelpButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:onClick="startYelpActivity"
                android:text="@string/checkoutYelp" />

            <Button
                android:id="@+id/goal_yellowButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:onClick="startYellowActivity"
                android:text="@string/checkoutYellow" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>